# cupcast-ai

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
configs/: mini_llm_small.yaml  mini_llm_tiny.yaml  prediction_model.yaml  prediction_model_real.yaml  simulation.yaml  simulation_world_cup_2026.yaml
data/: README.md
docs/: CLEANUP_REPORT.md
frontend/: package-lock.json  package.json  start_frontend_dev.ps1  tailwind.config.ts  tsconfig.json
models/: MODEL_CARD.md  README.md  ablation_study.json  ablation_study.md  comparison_results.json  dataset_validation_report.json  feature_importance.json  feature_importance.md  full_tournament_simulation.json  full_tournament_simulation.md  mini_llm_eval_report.json  model_leaderboard.json  rating_validation_report.json  real_data_results_summary.md  real_pipeline_analysis_config.json  world_cup_backtest_results.json  world_cup_error_analysis.json
scripts/: analyze_feature_importance.py  backtest_world_cups.py  build_teams_from_matches.py  check_api_dev.ps1  check_project_readiness.py  compare_models.py  create_pre_world_cup_rating_snapshots.py  create_sample_data.py  evaluate_mini_llm.py  export_frontend_reports.py  generate_portfolio_docs.py  generate_report_plots.py  run_ablation_study.py  run_api_dev.py  run_backtest.py  run_real_data_pipeline.py  run_simulation.py  simulate_full_tournament.py  start_api_dev.ps1  train_mini_llm.py  train_prediction_model.py  update_after_match.py  validate_dataset.py  validate_ratings.py
tests/: test_api.py  (+24 more)
(+99 files in other folders)
