[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cupcast-ai"
version = "0.1.0"
description = "World Cup prediction engine with a custom mini-LLM analyst."
requires-python = ">=3.11"
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "scikit-learn",
  "joblib",
  "fastapi",
  "uvicorn",
  "pydantic",
  "PyYAML",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "matplotlib"]

[tool.setuptools.packages.find]
where = ["src"]
